--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -334,11 +334,8 @@
   </svg>
   <h1>{{title}}</h1>
   <app-search-box (searchFired)="doSearch($event)"></app-search-box>
-  <ul>
-    <li *ngFor="let book of books | filterSearch: searchTitle">{{book.originalTitle}}
-      <img src="{{book.smallImageUrl}}">
-    </li>
-  </ul>
+  <app-book-table [books]="(books | filterSearch: searchTitle)">
+  </app-book-table>
 
 </div>
 
